--- a/deployment.yml
+++ b/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nodejs-deployment
-        image: cloudtechmasters/nodejs-cicd:v1
+        image: akashnewrepo/nodejs:v1
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
